fix: make overflow property of body hidden or auto when the modal is displayed or removed

--- a/src/style.css
+++ b/src/style.css
@@ -238,6 +238,16 @@ footer {
   font-weight: 700;
 }
 
+.comment-header {
+  padding: 10px;
+}
+
+.comment-list {
+}
+
+.comment-list-item {
+}
+
 @media only screen and (min-width: 768px) {
   .nav-btn {
     display: none;
